--- a/templates/registration/index.html
+++ b/templates/registration/index.html
@@ -15,7 +15,7 @@
     {{ form.email.label_tag }}
     {{ form.email }}
   </div>
-<!--   {% if form.invitation_code %}
+{% if form.invitation_code.errors %}
   <div class="form-group">
     <div class="alert alert-danger">
       {{ form.invitation_code.errors }}
@@ -25,6 +25,6 @@
 <div class="form-group">
   {{ form.invitation_code.label_tag }}
   {{ form.invitation_code }}
-</div> -->
+</div>
 </form>
 {% endblock %}
