--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -8,6 +8,20 @@
 </head>
 <body>
 	<div class="container">
+		{% if messages %}
+			<div class="row">
+				<div class="col-md-1"></div>
+		        <div class="col-md-10">
+		            {% for message in messages %}
+		            <div class="alert alert-{{ message.tags }} ">
+		                {{ message|safe }}
+		            </div>
+		            {% endfor %}
+		        </div>
+				<div class="col-md-1"></div>
+
+	    	</div>
+		{% endif %}
 		{% block content %}
 		{% endblock %}
 	</div>
