--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -4,10 +4,12 @@
 	{% load staticfiles %}
 	<meta charset="UTF-8">
 	<title>GusYa</title>
-	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+	<link rel="stylesheet" href="{% static 'css/estilos.css' %}" />
+
 </head>
 <body>
-	<div class="container">
+	<div class="container-fluid">
 		{% block content %}
 		{% endblock %}
 	</div>
