--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -3,6 +3,8 @@
 <head>
 	{% load staticfiles %}
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>GusYa</title>
 	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 </head>
@@ -24,6 +26,7 @@
 		{% endif %}
 		{% block content %}
 		{% endblock %}
+
 	</div>
 </body>
 </html>
