--- a/templates/base/base_admin.html
+++ b/templates/base/base_admin.html
@@ -27,7 +27,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="{% url 'user:waiting_list' %}">Principal</a></li>
             <li><a href="{% url 'user:active_user' %}">Lista de espera</a></li>
-            <li><a href="#contact">Contactos</a></li>
+            <li><a href="{% url 'user:phone' %}">Contactos</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
