--- a/templates/registration/index.html
+++ b/templates/registration/index.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html' %}
 {% load widget_tweaks %}
-{% load staticfiles %} 
+{% load staticfiles %}
 
 {% block content %}
 
@@ -11,7 +11,7 @@
 
   <section class="overlay container col-xs-8 col-md-6">
     <p class="mensaje">
-      Mandanos un mensaje para conseguir 
+      Mandanos un mensaje para conseguir
     </p>
      <p class="mensaje">
       lo que quieras sobre pedido.
@@ -19,14 +19,21 @@
      <p class="mensaje">
       Inscribete Ahora!
     </p>
-  
+
       <form action="" method="POST" role="form">
         {% csrf_token %}
+        {% if messages %}
+    		            {% for message in messages %}
+    		            <div class="alert alert-{{ message.tags }} ">
+    		                {{ message|safe }}
+    		            </div>
+    		            {% endfor %}"
+    		{% endif %}
         {% if form.email.errors %}
           <section class="form-group">
             <section class="alert alert-danger">
               {{ form.email.errors }}
-            </div>
+            </section>
           </section>
         {% endif %}
           <section class="form-group">
@@ -57,7 +64,7 @@
     <h2 id="cf">¿Como funciona?</h2>
     <p class="hiw">
       Mandanos un whatsapp cuando quieras para conseguir lo que quieras. Tenemos un equipo de operadores
-      capacitados para contestarles 24/7. Les conseguimos lo que necesitan (comida, reservaciones, flores, 
+      capacitados para contestarles 24/7. Les conseguimos lo que necesitan (comida, reservaciones, flores,
       etc.) y nos encargamos de entregarlo donde quieran.
     </p>
   </article>
@@ -68,10 +75,10 @@
 </figure>
 
 <section class="row container-fluid">
-  
+
   <section class="second container col-xs-8 col-md-6">
     <p class="mensaje">
-      Mandanos un mensaje para conseguir 
+      Mandanos un mensaje para conseguir
     </p>
      <p class="mensaje">
       lo que quieras sobre pedido.
@@ -79,12 +86,12 @@
      <p class="mensaje">
       Inscribete Ahora!
     </p>
-  
+
       <form action="" method="POST" role="form">
         {% csrf_token %}
         {% if form.email.errors %}
           <section class="form-group">
-            <div class="alert alert-danger">
+            <section class="alert alert-danger">
               {{ form.email.errors }}
             </section>
           </section>
@@ -111,49 +118,49 @@
  </section>
 
 <section class="faq" style="text-align: center">
-  <h2>¿Preguntas?</h2>                              
+  <h2>¿Preguntas?</h2>
 
     <article class="col-md-6 col-md-offset-3 col-xs-12">
       <p class="question"> P: ¿Que puede hacer Gus para mi?</p>
       <p class="answ">Gus te hace la vida más facil. Es tu concierge, asistente, compañero de toda la vida. Pidele lo que quieras cuando quieras y te conseguirá lo que necesitas. Se puede encargar de tu reservaciones de restaurante, de boletos de avión y hotel. Te consigue la comida o bebida que quieras tambien. Cuando quieras, donde quieras, y lo que quieras! <br>
       </p>
     </article>
-                    
+
 
     <article class="col-md-6 col-md-offset-3 col-xs-12">
         <p class="question">P: ¿Porque usar Gus?</p>
         <p class="answ">Gus te permite ahorrar largos tiempos de búsqueda y te permite enfocarte en lo que te guste más. Siempre te ofrece la mejor solución posible al precio más económico. Gracias a Gus, tienes acceso a todos los productos y servicios de manera eficiente y cómoda.</p>
     </article>
-            
+
 
     <article class="col-md-6 col-md-offset-3 col-xs-12">
         <p class="question">P: ¿Que tipo de servicios me consigue Gus? </p>
         <p class="answ">Lo que quieras, en el límite de lo legal.</p>
     </article>
-               
+
 
     <article class="col-md-6 col-md-offset-3 col-xs-12">
         <p class="question">P: ¿Que tan rápido Gus me ayuda?</p>
         <p class="answ">Lo mas rapido posible.</p>
     </article>
-              
+
 
     <article class="col-md-6 col-md-offset-3 col-xs-12">
         <p class="question">P: ¿Cuanto cuesta la ayuda de Gus? </p>
         <p class="answ"> Platicar con Gus es totalmente gratuito. Cuando se ordena algo, Gus te proporciona la tarifa y espera tu confirmación para ejecutar el orden. El pago es transparente y la propina incluida.</p>
     </article>
-          
+
 
     <article class="col-md-6 col-md-offset-3 col-xs-12">
         <p class="question">P: ¿Como realizo un pago con Gus?</p>
         <p class="answ">La primera vez que pides GusYa, te mandamos un vínculo seguro con nuestro aliado MercadoPago. Tienes que completar la información pedida para poder completar el orden. Los cargos a tu tarjeta se harán sólo cuando tú nos autorices.</p>
     </article>
-                    
+
 
     <article class="col-md-6 col-md-offset-3 col-xs-12">
         <p class="question">P: ¿Que tan seguro es el método de pago?</p>
         <p class="answ">Nosotros no guardamos el número de tarjeta directamente en nuestro sistema. Trabajamos con nuestro aliado MercadoPago, el cual tiene la experiencia de procesar pagos de millones de usuarios.</p>
-    </article>                                     
+    </article>
 </section>
 
 <footer class="col-md-12" style="clear: both;">
@@ -163,7 +170,7 @@
     </div>
     <div class="col-md-9" style="text-align: right;">
       <p>
-        <a href="{% url 'user:waiting_list' %}">Home</a> • 
+        <a href="{% url 'user:waiting_list' %}">Home</a> •
         <a href="#">Empleos</a>
         <a href="#l">Legal</a>
         <a href="#">Terminos</a>
@@ -175,7 +182,7 @@
       <p>© 2015 GusYa</p>
     </div>
   </div>
-  
+
 </footer>
 
 {% endblock %}
