--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -1,15 +1,15 @@
 *{
   font-family: 'Titillium Web', sans-serif;
 }
+
 .header{
-  position: relative;
+  background-size: cover;
   visibility: visible;
   background-color: transparent;
-  background-size: cover;
-  background-position: 50% top;
-  height: 750px;
+  height: 50%;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-position: center;
 }
 
 h1{
@@ -26,11 +26,14 @@ h1{
 }
 
 .logo{
+  margin-top: 0px;
   float: left;
 }
 
 .mensaje{
   color: white;
+  font-size: 20pt;
+  text-align: center;
 }
 
 @media (min-width: 992px)
@@ -40,7 +43,7 @@ h1{
 
 @media (min-width: 992px)
 .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9 {
-  float: left;
+  
 }
 
 label{
@@ -69,7 +72,11 @@ p{
 	color: #333;
 }
 
-.hiw{
+.bboton{
+  display: inline-block;
+  position: relative;
+  color: #fff;
+  background-color: blue;
 }
 
 .functionrow{
