--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -10,6 +10,7 @@
 	<style type="text/css">
 	.header{
 		background-image: url("{% static 'images/landingGusYa.jpeg' %}");
+		width: 100%;
 	}
 	</style>
 
