--- a/templates/registration/index.html
+++ b/templates/registration/index.html
@@ -6,7 +6,7 @@
 
 <header class="header" style="overflow: hidden">
   <figure class="logo">
-    <!--<img src="{% static 'images/l.png' %}" alt="GusYa">-->
+    <img src="{% static 'images/gus.svg' %}" alt="GusYa" width="100%">
   </figure>
 
   <section class="overlay container col-xs-8 col-md-6">
@@ -61,6 +61,43 @@
       etc.) y nos encargamos de entregarlo donde quieran.
     </p>
   </article>
+
+  <article class="col-md-6 col-md-offset-3" style="text-align: center; padding-bottom: 40px; background: white;">
+      
+      <article class="bboton">
+            <button class="fb"><i class="fa fa-facebook"></i> facebook</button>
+      </article>
+      <article class="element element-tw">
+          <div class="group twitter-share">
+            <div class="count twitter-count">346</div>
+            <i class="fa fa-caret-down"></i>
+            <button class="twitter"><i class="fa fa-twitter"></i> twitter</button>
+          </div>
+      </div>
+      <div class="element element-others">
+          <div class="group gplus-share">
+            <div class="count gplus-count">109</div>
+            <i class="fa fa-caret-down"></i>
+            <button class="gp"><i class="fa fa-google-plus"></i> google+</button>
+          </div>
+      </div>
+      <div class="element element-others">
+          <div class="group linkedin-share">
+            <div class="count linkedin-count">180</div>
+            <i class="fa fa-caret-down"></i>
+            <button class="linkedin"><i class="fa fa-linkedin"></i> linkedin</button>
+          </div>
+      </div>
+      <div class="element">
+          <div class="group instagram-share">
+            <div class="count instagram-count"></div>
+            <i class="fa fa-caret-down"></i>
+            <a href="https://instagram.com/gobutlerglobal/" target="_blank">
+              <button class="instagram"><i class="fa fa-instagram"></i> instagram</button>
+            </a>
+          </div>
+      </div>
+    </div>
 </section>
 
 <figure class="imagenes">
