--- a/templates/registration/index.html
+++ b/templates/registration/index.html
@@ -6,7 +6,7 @@
 
 <header class="header" style="overflow: hidden">
   <figure class="logo">
-    <img src="{% static 'images/gus.svg' %}" alt="GusYa" width="100%">
+   <!-- <img src="{% static 'images/gus.svg' %}" alt="GusYa" width="100%">-->
   </figure>
 
   <section class="overlay container col-xs-8 col-md-6">
@@ -53,10 +53,12 @@
         </section>
         <input type="submit" class="btn btn-default" value="Quiero usar Gus Ya!"/>
     </form>
+     <button type="button" class="arrow" aria-label="Left Align">
+          <a href="#cf" class="flecha">
+          <span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
+          </a>
+     </button>
   </section>
-  <figure class="arrow">
-       <!--descargar imagen flecha figure -->
-  </figure>
 </header>
 
 <section class="container">
@@ -198,27 +200,31 @@
         <p class="question">P: ¿Que tan seguro es el método de pago?</p>
         <p class="answ">Nosotros no guardamos el número de tarjeta directamente en nuestro sistema. Trabajamos con nuestro aliado MercadoPago, el cual tiene la experiencia de procesar pagos de millones de usuarios.</p>
     </article>
+
+
+    <button type="button" class="arrowup" aria-label="Left Align">
+          <a href="#cf" class="flecha">
+          <span class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
+          </a>
+    </button>
 </section>
 
-<footer class="col-md-12" style="clear: both;">
+
+
+<footer class="col-md-12">
   <div class="pdp">
     <div class="col-md-3 hidden-sm hidden-xs">
-      <p>© 2015 GoButler</p>
+      <p>© 2015 GusYa</p>
     </div>
-    <div class="col-md-9" style="text-align: right;">
+    <aside class="col-md-9" style="text-align: right;">
       <p>
-        <a href="{% url 'user:waiting_list' %}">Home</a> •
+        <a href="{% url 'user:waiting_list' %}">Home</a> 
         <a href="#">Empleos</a>
         <a href="#l">Legal</a>
         <a href="#">Terminos</a>
         <a href="#">Protección de datos</a>
       </p>
-    </div>
-    <div class="col-md-3 hidden-md hidden-lg">
-      <br>
-      <p>© 2015 GusYa</p>
-    </div>
-  </div>
+    </aside>
 
 </footer>
 
