--- a/templates/registration/index.html
+++ b/templates/registration/index.html
@@ -1,13 +1,12 @@
 {% extends 'base/base.html' %}
 {% load widget_tweaks %}
-{% load social_share %}
 {% load staticfiles %}
 
 {% block content %}
 
 <header class="header" style="overflow: hidden">
   <figure class="logo">
-   <!-- <img src="{% static 'images/gus.svg' %}" alt="GusYa" width="100%">-->
+    <img src="{% static 'images/gus.svg' %}" alt="GusYa" width="100%">
   </figure>
 
   <section class="overlay container col-xs-8 col-md-6">
@@ -73,14 +72,41 @@
   </article>
 
   <article class="col-md-6 col-md-offset-3" style="text-align: center; padding-bottom: 40px; background: white;">
-    <div class="ssk-group ssk-count">
-      <a href="" class="ssk ssk-facebook"></a>
-      <a href data-url="http://gusya.co" data-text="Text for twitter" class="ssk ssk-twitter"></a>
-      <a href="" class="ssk ssk-google-plus"></a>
-      <a href="" class="ssk ssk-pinterest"></a>
-      <a href="" class="ssk ssk-linkedin"></a>
+      
+      <article class="bboton">
+            <button class="fb"><i class="fa fa-facebook"></i> facebook</button>
+      </article>
+      <article class="element element-tw">
+          <div class="group twitter-share">
+            <div class="count twitter-count">346</div>
+            <i class="fa fa-caret-down"></i>
+            <button class="twitter"><i class="fa fa-twitter"></i> twitter</button>
+          </div>
+      </div>
+      <div class="element element-others">
+          <div class="group gplus-share">
+            <div class="count gplus-count">109</div>
+            <i class="fa fa-caret-down"></i>
+            <button class="gp"><i class="fa fa-google-plus"></i> google+</button>
+          </div>
+      </div>
+      <div class="element element-others">
+          <div class="group linkedin-share">
+            <div class="count linkedin-count">180</div>
+            <i class="fa fa-caret-down"></i>
+            <button class="linkedin"><i class="fa fa-linkedin"></i> linkedin</button>
+          </div>
+      </div>
+      <div class="element">
+          <div class="group instagram-share">
+            <div class="count instagram-count"></div>
+            <i class="fa fa-caret-down"></i>
+            <a href="https://instagram.com/gobutlerglobal/" target="_blank">
+              <button class="instagram"><i class="fa fa-instagram"></i> instagram</button>
+            </a>
+          </div>
+      </div>
     </div>
-  </article>
 </section>
 
 <figure class="imagenes">
@@ -177,9 +203,7 @@
 
 
     <button type="button" class="arrowup" aria-label="Left Align">
-          <a href="#cf" class="flecha">
           <span class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
-          </a>
     </button>
 </section>
 
