--- a/templates/registration/index.html
+++ b/templates/registration/index.html
@@ -185,21 +185,21 @@
 
 
 
-<footer class="col-md-12">
+<footer>
   <div class="pdp">
     <div class="col-md-3 hidden-sm hidden-xs">
       <p>© 2015 GusYa</p>
     </div>
     <aside class="col-md-9" style="text-align: right;">
       <p>
-        <a href="{% url 'user:waiting_list' %}">Home</a> 
+        <a href="{% url 'user:waiting_list' %}">Home</a>
         <a href="#">Empleos</a>
         <a href="#l">Legal</a>
         <a href="#">Terminos</a>
         <a href="#">Protección de datos</a>
       </p>
     </aside>
-
+  </div>
 </footer>
 
 {% endblock %}
