google meta tag verification

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -3,6 +3,7 @@
 <head>
 	{% load staticfiles %}
 	<meta charset="UTF-8">
+	<meta name="google-site-verification" content="HUiZQPmWjCUh_UP2qKO-T8l0WdlEFeXA2OCJaMQBFoU" />
 	<title>GusYa</title>
 	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
 	<link rel="stylesheet" href="{% static 'css/estilos.css' %}" />
