--- a/templates/registration/index.html
+++ b/templates/registration/index.html
@@ -84,9 +84,34 @@
 
 </section>
 
-<figure class="imagenes">
-  <!--imagenes figure-->
-</figure>
+<!-- <div id="images" class="row">
+  <div class="col-md-2">
+    <figure>
+      <img src="{% static 'images/PastedGraphic-1.png' %}" alt="">
+    </figure>
+  </div>
+  <div class="col-md-2">
+    <figure>
+      <img src="{% static 'images/PastedGraphic-2.png' %}" alt="">
+    </figure>
+  </div>
+  <div class="col-md-2">
+    <figure>
+      <img src="{% static 'images/PastedGraphic-3.png' %}" alt="">
+    </figure>
+  </div>
+  <div class="col-md-2">
+    <figure>
+      <img src="{% static 'images/PastedGraphic-4.png' %}" alt="">
+    </figure>
+  </div>
+  <div class="col-md-2">
+    <figure>
+      <img src="{% static 'images/PastedGraphic-5.png' %}" alt="">
+    </figure>
+  </div>
+
+  </div> -->
 
 <section class="row container-fluid">
 
