--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -11,7 +11,7 @@
 	<link rel="shortcut icon" href="{% static 'images/Bowtie.png' %}" type="image/png" />
 	<style type="text/css">
 	.header{
-		background-image: url("{% static 'images/landingGusYa.jpeg' %}");
+		background-image: url("{% static 'images/landing_image.jpg' %}");
 		width: 100%;
 	}
 	</style>
