--- a/templates/registration/index.html
+++ b/templates/registration/index.html
@@ -6,7 +6,7 @@
 
 <header class="header" style="overflow: hidden">
   <figure class="logo">
-    <img src="{% static 'images/gusYa_Blanco.png' %}" alt="GusYa" width="100%">
+    <img src="{% static 'images/G_logo_Blanco.png' %}" alt="GusYa" width="100%">
   </figure>
 
   <section class="overlay container col-xs-8 col-md-6">
@@ -66,9 +66,9 @@
   <article class="functionrow">
     <h2 id="cf">¿Como funciona?</h2>
     <p class="hiw">
-      Mandanos un whatsapp cuando quieras para conseguir lo que quieras. Tenemos un equipo de operadores
-      capacitados para contestarles 24/7. Les conseguimos lo que necesitan (comida, reservaciones, flores,
-      etc.) y nos encargamos de entregarlo donde quieran.
+      Escribe un mensaje de whatsapp para conseguir lo que quieras. Gus te escuchará 24/7
+      y te acompañará hasta que recibas satisfactoriamente tu pedido.
+      <span style="color: #77C3C0">#lavidafacil</span>
     </p>
   </article>
 
@@ -168,45 +168,51 @@
   <h2>¿Preguntas?</h2>
 
     <article class="col-md-6 col-md-offset-3 col-xs-12">
-      <p class="question"> P: ¿Que puede hacer Gus para mi?</p>
-      <p class="answ">Gus te hace la vida más facil. Es tu concierge, asistente, compañero de toda la vida. Pidele lo que quieras cuando quieras y te conseguirá lo que necesitas. Se puede encargar de tu reservaciones de restaurante, de boletos de avión y hotel. Te consigue la comida o bebida que quieras tambien. Cuando quieras, donde quieras, y lo que quieras! <br>
+      <p class="question"> P: ¿Qué puede hacer Gus para mi?</p>
+      <p class="answ">Gus te hace la vida más fácil. Es tu amigo, asistente y concierge personal. Gus y su equipo de operadores están capacitados para conseguirte cualquier cosa  que necesites (comida, reservaciones, boletos, flores). Nos encargamos de entregarlo en tiempo récord a donde nos indiques.<br>
       </p>
     </article>
 
 
     <article class="col-md-6 col-md-offset-3 col-xs-12">
-        <p class="question">P: ¿Porque usar Gus?</p>
-        <p class="answ">Gus te permite ahorrar largos tiempos de búsqueda y te permite enfocarte en lo que te guste más. Siempre te ofrece la mejor solución posible al precio más económico. Gracias a Gus, tienes acceso a todos los productos y servicios de manera eficiente y cómoda.</p>
+        <p class="question">P: ¿Por qué pedirle a Gus?</p>
+        <p class="answ">Gus te permite ahorrar largos tiempos de  búsqueda y de completar interminables formularios de compra para que dediques tu tiempo en lo que más te gusta. Gus siempre te ofrece la mejor solución a los precios más económicos y competitivos del mercado. Gracias a Gus, tienes acceso a todos los productos y servicios de manera eficiente y cómoda.</p>
     </article>
 
 
     <article class="col-md-6 col-md-offset-3 col-xs-12">
-        <p class="question">P: ¿Que tipo de servicios me consigue Gus? </p>
-        <p class="answ">Lo que quieras, en el límite de lo legal.</p>
+        <p class="question">P: ¿Qué le puedo pedir a Gus? </p>
+        <p class="answ" style="text-align: center;">Todo lo que quieras, siempre y cuando sea legal.</p>
     </article>
 
 
     <article class="col-md-6 col-md-offset-3 col-xs-12">
-        <p class="question">P: ¿Que tan rápido Gus me ayuda?</p>
-        <p class="answ">Lo mas rapido posible.</p>
+        <p class="question">P: ¿Cuánto tiempo tarda Gus en ayudarme?</p>
+        <p class="answ">Lo más rápido posible. El servicio es inmediato y la entrega se realizará en tiempo récord gracias a nuestra gran red de colaboradores logísticos.</p>
     </article>
 
 
     <article class="col-md-6 col-md-offset-3 col-xs-12">
-        <p class="question">P: ¿Cuanto cuesta la ayuda de Gus? </p>
-        <p class="answ"> Platicar con Gus es totalmente gratuito. Cuando se ordena algo, Gus te proporciona la tarifa y espera tu confirmación para ejecutar el orden. El pago es transparente y la propina incluida.</p>
+        <p class="question">P: ¿Actualmente dónde está Gus disponible? </p>
+        <p class="answ">Gus te puede ayudar desde cualquier lado del mundo para servicios online. Si necesitas que te hagamos una entrega a domicilio actualmente solo operamos en la zona metropolitana de Ciudad de México.</p>
     </article>
 
 
     <article class="col-md-6 col-md-offset-3 col-xs-12">
-        <p class="question">P: ¿Como realizo un pago con Gus?</p>
-        <p class="answ">La primera vez que pides GusYa, te mandamos un vínculo seguro con nuestro aliado MercadoPago. Tienes que completar la información pedida para poder completar el orden. Los cargos a tu tarjeta se harán sólo cuando tú nos autorices.</p>
+        <p class="question">P: ¿Cuánto cuesta?</p>
+        <p class="answ">Platicar con Gus es totalmente gratuito. Cuándo pides algo, Gus simplemente te pasará la mejor cotización posible y esperará tu confirmación para ejecutar el pedido. El pago es transparente por lo que no hay tasas escondidas. La propina está siempre incluida.</p>
     </article>
 
 
     <article class="col-md-6 col-md-offset-3 col-xs-12">
-        <p class="question">P: ¿Que tan seguro es el método de pago?</p>
-        <p class="answ">Nosotros no guardamos el número de tarjeta directamente en nuestro sistema. Trabajamos con nuestro aliado MercadoPago, el cual tiene la experiencia de procesar pagos de millones de usuarios.</p>
+        <p class="question">P: ¿Cómo realizo un pago con Gus?</p>
+        <p class="answ">Si es la primera vez que le pides a Gus, te enviaremos un vínculo seguro con nuestro aliado Mercado Pago y simplemente tendrás que rellenar la información básica para poder completar el pedido. Los cargos se harán de manera segura y sólo cuando tu nos lo autorices.</p>
+    </article>
+
+    <article class="col-md-6 col-md-offset-3 col-xs-12">
+        <p class="question">P: ¿Es seguro el medio de pago?</p>
+        <p class="answ">Gus no guardará tus datos de tarjeta. Todos los procesos de pago son gestionados por Mercado Pago.
+</p>
     </article>
 
 </section>
@@ -223,9 +229,8 @@
       <p>
         <a href="{% url 'user:waiting_list' %}">Home</a>
         <a href="#">Empleos</a>
-        <a href="#l">Legal</a>
         <a href="#">Terminos</a>
-        <a href="#">Protección de datos</a>
+        <a href="#">Legal</a>
       </p>
     </aside>
 
