--- a/templates/registration/phone_number.html
+++ b/templates/registration/phone_number.html
@@ -24,9 +24,34 @@
   <div class="row">
     <div class="col-md-2"></div>
     <div class="col-md-8">
-      <p>Ingresa tu número telefonico</p>
+      <br>
+      <p>Ingresa tus datos y empieza a usar GusYa</p>
       <form action="" method="POST">
         {% csrf_token %}
+        {% if form.name.errors %}
+          <div class="form-group">
+            <div class="alert alert-danger">
+              {{ form.name.errors }}
+            </div>
+          </div>
+        {% endif %}
+        <div class="form-group">
+          {{ form.name.label_tag }}
+          {{ form.name|attr:"class: form-control" }}
+        </div>
+
+        {% if form.last_name.errors %}
+          <div class="form-group">
+            <div class="alert alert-danger">
+              {{ form.last_name.errors }}
+            </div>
+          </div>
+        {% endif %}
+        <div class="form-group">
+          {{ form.last_name.label_tag }}
+          {{ form.last_name|attr:"class: form-control" }}
+        </div>
+
         {% if form.phone_number.errors %}
           <div class="form-group">
             <div class="alert alert-danger">
@@ -38,7 +63,7 @@
           {{ form.phone_number.label_tag }}
           {{ form.phone_number|attr:"class: form-control" }}
         </div>
-        <input type="submit" name="name" value="Enviar" class="btn btn-default">
+        <input type="submit" name="send" value="Enviar" class="btn btn-default">
       </form>
     </div>
 
