autocomplete admin dashboard

--- a/templates/registration/index.html
+++ b/templates/registration/index.html
@@ -75,7 +75,7 @@
   <article class="col-md-6 col-md-offset-3" style="text-align: center; padding-bottom: 40px; background: white;">
     <div class="ssk-group ssk-count">
       <a href="" class="ssk ssk-facebook"></a>
-      <a href data-url="http://gusya.co" data-text="Text for twitter" class="ssk ssk-twitter"></a>
+      <a href data-url="http://gusya.co" data-text="Escribe un whatsapp a Gus para conseguir lo que quieras cuando quieras. Gus esta contigo 24/7 y te acompaña hasta que recibas satisfactoriamente tu pedido. #lavidafacil" class="ssk ssk-twitter"></a>
       <a href="" class="ssk ssk-google-plus"></a>
       <a href="" class="ssk ssk-pinterest"></a>
       <a href="" class="ssk ssk-linkedin"></a>
@@ -221,16 +221,22 @@
 
 <footer>
 
-    <div class="col-md-3 hidden-sm hidden-xs" style="margin-top: 20px;">
+    <div class="col-md-3 hidden-sm hidden-xs" style="margin-top: 30em;">
       <p>© 2015 GusYa</p>
     </div>
-    <div class="col-md-5"></div>
-    <aside class="col-md-4" style="text-align: right; margin-top: 20px;">
+    <div class="col-md-5" style="margin-top: 20px;">
+      <p style="text-align: center;">
+        <a href="https://www.facebook.com/pidegusya" style="margin-left: 4em; font-size: 2em;" class="icon-facebook2"></a>
+        <a href="#" class="icon-twitter2" style="font-size: 2em;"></a>
+      </p>
+
+    </div>
+    <aside class="col-md-4" style="text-align: right; margin-top: 30em;">
       <p>
         <a href="{% url 'user:waiting_list' %}">Home</a>
         <a href="#">Empleos</a>
-        <a href="#">Terminos</a>
-        <a href="#">Legal</a>
+        <a href="#">Terminos y condiciones</a>
+        <a href="mailto:contacto@gusya.co">Contacto</a>
       </p>
     </aside>
 
