--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -7,6 +7,7 @@
 	<title>GusYa</title>
 	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
 	<link rel="stylesheet" href="{% static 'css/estilos.css' %}" />
+	<link rel="stylesheet" href="{% static 'css/style.css' %}" />
 	<link rel="stylesheet" href="{% static 'css/social-share-kit.css' %}" />
 	<link rel="shortcut icon" href="{% static 'images/Bowtie.png' %}" type="image/png" />
 	<style type="text/css">
