save credit card

--- a/templates/base/base_user.html
+++ b/templates/base/base_user.html
@@ -25,7 +25,8 @@
       {% block content %}
       {% endblock %}
 
-    </div><!-- /.container -->
+    </div>
 
-
-</body></html>
+    </script>
+  </body>
+</html>
