--- a/templates/registration/phone_number.html
+++ b/templates/registration/phone_number.html
@@ -115,8 +115,11 @@
               <input class="form-control pay" type="text" size="2" data-openpay-card="expiration_year" />
           </div>
         </div>
-
-        <input type="submit" id="pay-button" value="Pagar"/>
+        <div class="row">
+          <div class="col-md-12">
+            <input class="btn btn-success" type="submit" id="pay-button" value="Registrarse"/>            
+          </div>
+        </div>
       </form>
     </div>
 
