fix save credit card

--- a/templates/base/base_admin.html
+++ b/templates/base/base_admin.html
@@ -27,6 +27,7 @@
           <ul class="nav navbar-nav">
             <li><a href="{% url 'user:active_user' %}">Lista de espera</a></li>
             <li><a href="{% url 'user:phone' %}">Contactos</a></li>
+            <li><a href="{% url 'user:make_charge' %}">Pago</a></li>
             <li><a href="{% url 'user:admin_logout' %}">Cerrar Sesión</a></li>
           </ul>
         </div><!--/.nav-collapse -->
