--- a/templates/base/base_admin.html
+++ b/templates/base/base_admin.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>GusYa</title>
-
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-
+    <link rel="stylesheet" href="{% static 'css/admin.css' %}">
   </head>
 
   <body>
