--- a/templates/registration/charge.html
+++ b/templates/registration/charge.html
@@ -2,7 +2,7 @@
 {% load widget_tweaks %}
 
 {% block content %}
-<div class="row">
+<div id="charge" class="row">
   <div class="col-md-12">
     <form action="" method="POST">
       <h1>Hola</h1>
