separate users and activate openpay producction

--- a/templates/base/base_admin.html
+++ b/templates/base/base_admin.html
@@ -25,6 +25,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="{% url 'user:active_user' %}">Lista de espera</a></li>
+            <li><a href="{% url 'user:mail_sent' %}">Correos Enviados</a></li>
             <li><a href="{% url 'user:phone' %}">Contactos</a></li>
             <li><a href="{% url 'user:make_charge' %}">Pago</a></li>
             <li><a href="{% url 'user:admin_logout' %}">Cerrar Sesión</a></li>
