--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	{% load staticfiles %}
-	<meta charset="UTF-8">
+	<meta charset='UTF-8'>
 	<meta name="google-site-verification" content="HUiZQPmWjCUh_UP2qKO-T8l0WdlEFeXA2OCJaMQBFoU" />
 	<title>GusYa</title>
 	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
@@ -11,10 +11,21 @@
 	<link rel="stylesheet" href="{% static 'css/social-share-kit.css' %}" />
 	<link rel="shortcut icon" href="{% static 'images/Bowtie.png' %}" type="image/png" />
 	<style type="text/css">
-	.header{
-		background-image: url("{% static 'images/landing_image.jpg' %}");
-	}
-	</style>
+	  .header{
+		  background-image: url("{% static 'images/landing_image.jpg' %}");
+	  }
+  </style>
+  <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+              ga('create', 'UA-63882989-1', 'auto');
+                ga('send', 'pageview');
+
+  </script>
+
 
 </head>
 <body>
