--- a/templates/registration/card.html
+++ b/templates/registration/card.html
@@ -4,45 +4,6 @@
 
 {% block content %}
 
-
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <script type="text/javascript"
-  src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script type="text/javascript"
-  src="https://openpay.s3.amazonaws.com/openpay.v1.min.js"></script>
-  <script type='text/javascript'
-  src="https://openpay.s3.amazonaws.com/openpay-data.v1.min.js"></script>
-
-  <script type="text/javascript">
-  $(document).ready(function() {
-
-    OpenPay.setId('mfwskxgm60glhftb6zoi');
-    OpenPay.setApiKey('pk_d264eb5cb34640b28e9b4f3d905a8a9c');
-    OpenPay.setSandboxMode(true);
-    //Se genera el id de dispositivo
-    var deviceSessionId = OpenPay.deviceData.setup("payment-form", "deviceIdHiddenFieldName");
-
-    $('#pay-button').on('click', function(event) {
-      event.preventDefault();
-      $("#pay-button").prop( "disabled", true);
-      OpenPay.token.extractFormAndCreate('payment-form', sucess_callbak, error_callbak);
-    });
-
-    var sucess_callbak = function(response) {
-      var token_id = response.data.id;
-      $('#token_id').val(token_id);
-      $('#payment-form').submit();
-    };
-
-    var error_callbak = function(response) {
-      var desc = response.data.description != undefined ? response.data.description : response.message;
-      alert("ERROR [" + response.status + "] " + desc);
-      $("#pay-button").prop("disabled", false);
-    };
-
-  });
-  </script>
-
   <style>
   @charset "US-ASCII";
   @import "http://fonts.googleapis.com/css?family=Lato:300,400,700";
@@ -323,11 +284,11 @@
     </div>
     <h2>Ingresa tus datos para empezar a usar !GusYa¡</h2>
     <div class="pymnts">
-      <form action="" method="POST" id="payment-form">
+      <form action="" method="POST" id="card-form">
         {% csrf_token %}
 
-        <input type="hidden" name="token_id" id="token_id">
         <div class="pymnt-itm card active">
+          <span class="card-errors"></span>
           <h2>Tarjeta de crédito o débito</h2>
           <div class="pymnt-cntnt">
             <div class="card-expl">
@@ -347,37 +308,88 @@
 
                 <div class="sctn-row">
                   <div class="sctn-col l">
-                    <label>Número telefonico</label><input type="number" name="phone_number" placeholder="xx-xxxx-xxxx" autocomplete="off">
+                    <label>Número telefonico</label><input type="number" name="phone_number" placeholder="55-5555-5555" autocomplete="off">
                   </div>
                   <br>
 
               <div class="sctn-col l">
                 <br>
-                <label>Nombre del titular</label><input type="text" name="holder" placeholder="Como aparece en la tarjeta" autocomplete="off" data-openpay-card="holder_name">
+                <label>Nombre del tarjetahabiente</label><input type="text" placeholder="Nombre del tarjetahabiente" size="20" autocomplete="off" data-conekta="card[name]">
               </div>
               <div class="sctn-col">
                 <br>
-                <label>Número de tarjeta</label><input type="text" name="card" autocomplete="off" data-openpay-card="card_number"></div>
+                <label>Número de tarjeta</label><input type="text" autocomplete="off" size="20" data-conekta="card[number]"></div>
               </div>
               <div class="sctn-row">
                 <div class="sctn-col l">
                   <label>Fecha de expiración</label>
-                  <div class="sctn-col half l"><input type="text" name="month" placeholder="Mes" data-openpay-card="expiration_month"></div>
-                  <div class="sctn-col half l"><input type="text" name="year" placeholder="Año" data-openpay-card="expiration_year"></div>
+                  <div class="sctn-col half l"><input type="text" placeholder="Mes" data-conekta="card[exp_month]"></div>
+                  <div class="sctn-col half l"><input type="text" placeholder="Año" data-conekta="card[exp_year]"></div>
                 </div>
                 <div class="sctn-col cvv"><label>Código de seguridad</label>
-                  <div class="sctn-col half l"><input type="text" name="cvv" placeholder="3 dígitos" autocomplete="off" data-openpay-card="cvv2"></div>
+                    <div class="sctn-col half l"><input type="text" placeholder="3 dígitos" autocomplete="off" size="4" data-conekta="card[cvc]"></div>
                 </div>
               </div>
               <div class="openpay"><div class="logop">Transacciones realizadas vía:</div>
               <div class="shield">Tus pagos se realizan de forma segura con encriptación de 256 bits</div>
             </div>
             <div class="sctn-row">
-              <a class="btn btn-success" id="pay-button">Registrarse</a>
+                <button class="btn btn-success"  type="submit">Suscribirse ahora!</button>
             </div>
           </div>
         </div>
       </form>
     </div>
-  </div>
+</div>
+
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script type="text/javascript" src="https://conektaapi.s3.amazonaws.com/v0.3.2/js/conekta.js"></script>
+<script type="text/javascript">
+    // Conekta Public Key
+    Conekta.setPublishableKey('key_HaiUGVjycdHrDy2xqHzsvCg');
+    // ...
+    jQuery(function($) {
+        $("#card-form").submit(function(event) {
+            var $form;
+            $form = $(this);
+
+            /* Previene hacer submit más de una vez */
+            $form.find("button").prop("disabled", true);
+            Conekta.token.create($form, conektaSuccessResponseHandler, conektaErrorResponseHandler);
+
+            /* Previene que la información de la forma sea enviada al servidor */
+            return false;
+        });
+        });
+
+    var conektaSuccessResponseHandler;
+    conektaSuccessResponseHandler = function(token) {
+          var $form;
+            $form = $("#card-form");
+
+              
+            /* Inserta el token_id en la forma para que se envíe al servidor */
+
+              $form.append($("<input type=\"hidden\" name=\"conektaTokenId\" />").val(token.id));
+
+                
+              /* and submit */
+
+                $form.get(0).submit();
+    };
+
+    var conektaErrorResponseHandler;
+    conektaErrorResponseHandler = function(response) {
+          var $form;
+          $form = $("#card-form");
+
+              
+          /* Muestra los errores en la forma */
+
+          $form.find(".card-errors").text(response.message);
+          $form.find("button").prop("disabled", false);
+    };
+    
+</script>
+
   {% endblock %}
